--- a/client/html/finance.html
+++ b/client/html/finance.html
@@ -87,7 +87,7 @@
                             <button class="chat-btn"><i class="fas fa-plus"></i></button>
                             <button class="chat-btn"><i class="fas fa-history"></i></button>
                         </div>
-                        <input type="text" placeholder="Pergunte sobre suas finanças">
+                        <textarea class="chat-input" placeholder="Pergunte sobre suas finanças" rows="1"></textarea>
                         <button class="send-btn"><i class="fas fa-arrow-up"></i></button>
                     </div>
                 </div>
