--- a/client/html/home.html
+++ b/client/html/home.html
@@ -43,6 +43,9 @@
                     </button>
                 </div>
             </div>
+            <div class="ai-chat-side-card">
+                <!-- Conteúdo adicional do chat -->
+            </div>
         </div>
     </main>
 
