plataforma pronta sem testes

--- a/client/html/integration.html
+++ b/client/html/integration.html
@@ -119,13 +119,13 @@
 
     <ul class="nav-links">
         <li>
-            <a href="home.html" class="active">
+            <a href="/home.html" class="active">
                 <i class="fas fa-home"></i>
                 <span class="link-name">Home</span>
             </a>
         </li>
         <li>
-            <a href="finance.html">
+            <a href="/finance.html">
                 <i class="fas fa-th-large"></i>
                 <span class="link-name">Finance</span>
             </a>
@@ -137,7 +137,7 @@
                 <i class="fas fa-chevron-down arrow"></i>
             </a>
             <ul class="sub-menu">
-                <li><a href="invest-dash.html">Dash</a></li>
+                <li><a href="/invest-dash.html">Dash</a></li>
                 <li><a href="#">Fiscal</a></li>
             </ul>
         </li>
