--- a/client/html/integration.html
+++ b/client/html/integration.html
@@ -47,3 +47,21 @@
         </li>
     </ul>
 </nav>
+
+<!-- Modal de Histórico de Chats -->
+<div id="chat-history-modal" class="chat-modal">
+    <div class="chat-modal-content">
+        <div class="chat-modal-header">
+            <h3>Histórico de Conversas</h3>
+            <button class="chat-modal-close" id="close-history-modal">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <div class="chat-modal-body" id="chat-list-container">
+            <div class="loading-chats">
+                <i class="fas fa-spinner fa-spin"></i>
+                <span>Carregando conversas...</span>
+            </div>
+        </div>
+    </div>
+</div>
