--- a/client/html/finance.html
+++ b/client/html/finance.html
@@ -19,7 +19,7 @@
         <!-- Header -->
         <header class="finance-header">
             <div class="welcome-text">
-                <h1>Bem-vindo, João</h1>
+                <h1>Bem-vindo, <span data-user-name>Usuário</span></h1>
                 <p>Aqui estão suas finanças</p>
             </div>
             <div class="date-selector">
