--- a/client/html/invest-dash.html
+++ b/client/html/invest-dash.html
@@ -37,7 +37,7 @@
 
         <!-- Content Area Header -->
         <div class="content-header">
-            <h1>Aqui estão seus investimentos, João</h1>
+            <h1>Aqui estão seus investimentos, <span data-user-name>Usuário</span></h1>
             <p>Sua carteira rendeu 1.2% este mês.</p>
         </div>
 
