--- a/client/html/invest-dash.html
+++ b/client/html/invest-dash.html
@@ -226,6 +226,8 @@
     </main>
 
     <script src="../js/integration.js"></script>
+    <script src="../js/invest-dash.patrimonio.js"></script>
+    <script src="../js/invest-dash.manual-modal.js"></script>
     <script src="../js/invest-dash.js"></script>
 </body>
 </html>
