18:23 - dois card prontos (sem testar)

--- a/client/html/invest-dash.html
+++ b/client/html/invest-dash.html
@@ -79,13 +79,11 @@
                 <div class="option-content" id="m-opt2">
                     <div class="main-card-full">
                         <div class="card-header">
-                            <button class="card-opt active">Rentabilidade no Mês</button>
-                            <button class="card-opt">Rentabilidade no Ano</button>
-                            <button class="card-opt">Rentabilidade em 12 Meses</button>
+                            <button class="card-opt active">Rentabilidade Consolidada</button>
                         </div>
                         <div class="card-body">
                             <div class="card-main-content">
-                                <!-- Conteúdo Principal -->
+                                <div id="rentabilidade-card-slot"></div>
                             </div>
                         </div>
                     </div>
@@ -187,6 +185,7 @@
 
     <script src="../js/integration.js"></script>
     <script src="../js/invest-dash.patrimonio.js"></script>
+    <script src="../js/invest-dash.rentabilidade.js"></script>
     <script src="../js/invest-dash.manual-modal.js"></script>
     <script src="../js/invest-dash.js"></script>
 </body>
