--- a/client/html/invest-dash.html
+++ b/client/html/invest-dash.html
@@ -61,7 +61,7 @@
                         <div class="card-header">
                             <button class="card-opt active" data-main-card="patrimonio">Patrimônio Total Investido</button>
                             <button class="card-opt" data-main-card="resultado">Resultado Financeiro</button>
-                            <button class="card-opt">Alocação Real vs Planejada</button>
+                            <button class="card-opt" data-main-card="alocacao">Alocação Real vs Planejada</button>
                             <button class="card-opt">Rentabilidade Consolidada</button>
                             <button class="manual-asset-trigger" id="manual-asset-trigger" aria-label="Lançar ativo manualmente">
                                 <i class="fas fa-plus"></i>
@@ -71,6 +71,7 @@
                             <div class="card-main-content">
                                 <div id="patrimonio-card-slot"></div>
                                 <div id="resultado-card-slot" style="display:none;"></div>
+                                <div id="alocacao-card-slot" style="display:none;"></div>
                             </div>
                         </div>
                     </div>
@@ -188,6 +189,7 @@
     <script src="../js/invest-dash.patrimonio.js"></script>
     <script src="../js/invest-dash.rentabilidade.js"></script>
     <script src="../js/invest-dash.resultado.js"></script>
+    <script src="../js/invest-dash.alocacao.js"></script>
     <script src="../js/invest-dash.manual-modal.js"></script>
     <script src="../js/invest-dash.js"></script>
 </body>
